[package]
name = "rust-async"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Optimization-related dependencies
[profile.dev]
lto = "thin"
opt-level = 1

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = true
